fixes timer on mobile adaptive

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 460px) {
   .timer {
     transform: translateY(258px);
   }
